--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 id="msg">LOADING....</h1>
     <script>
-        liff.init({liffId: "LIFF_ID"})
+        liff.init({liffId: "2008827804-6NH9mmmn"})
         .then(()=>{
             document.getElementById("msg").textContent = "HELLO LIFF";
     });
